Refactor so taskManager is set during constructor