@@ -149,7 +149,7 @@ public final class MockTransportService extends TransportService {
     ) {
         return new MockTransportService(
             settings,
-            transport,
+            new StubbableTransport(transport),
             threadPool,
             interceptor,
             boundAddress -> new DiscoveryNode(
@@ -161,7 +161,7 @@ public final class MockTransportService extends TransportService {
                 version
             ),
             clusterSettings,
-            taskHeaders
+            new TaskManager(settings, threadPool, taskHeaders)
         );
     }
 
@@ -183,7 +183,7 @@ public final class MockTransportService extends TransportService {
     ) {
         this(
             settings,
-            transport,
+            new StubbableTransport(transport),
             threadPool,
             interceptor,
             (boundAddress) -> DiscoveryNode.createLocal(
@@ -192,7 +192,7 @@ public final class MockTransportService extends TransportService {
                 settings.get(Node.NODE_NAME_SETTING.getKey(), UUIDs.randomBase64UUID())
             ),
             clusterSettings,
-            Collections.emptySet()
+            new TaskManager(settings, threadPool, Set.of())
         );
     }
 
@@ -212,7 +212,27 @@ public final class MockTransportService extends TransportService {
         @Nullable ClusterSettings clusterSettings,
         Set<String> taskHeaders
     ) {
-        this(settings, new StubbableTransport(transport), threadPool, interceptor, localNodeFactory, clusterSettings, taskHeaders);
+        this(
+            settings,
+            new StubbableTransport(transport),
+            threadPool,
+            interceptor,
+            localNodeFactory,
+            clusterSettings,
+            new TaskManager(settings, threadPool, taskHeaders)
+        );
+    }
+
+    public MockTransportService(
+        Settings settings,
+        Transport transport,
+        ThreadPool threadPool,
+        TransportInterceptor interceptor,
+        Function<BoundTransportAddress, DiscoveryNode> localNodeFactory,
+        @Nullable ClusterSettings clusterSettings,
+        TaskManager taskManager
+    ) {
+        this(settings, new StubbableTransport(transport), threadPool, interceptor, localNodeFactory, clusterSettings, taskManager);
     }
 
     private MockTransportService(
@@ -222,7 +242,7 @@ public final class MockTransportService extends TransportService {
         TransportInterceptor interceptor,
         Function<BoundTransportAddress, DiscoveryNode> localNodeFactory,
         @Nullable ClusterSettings clusterSettings,
-        Set<String> taskHeaders
+        TaskManager taskManager
     ) {
         super(
             settings,
@@ -231,8 +251,8 @@ public final class MockTransportService extends TransportService {
             interceptor,
             localNodeFactory,
             clusterSettings,
-            taskHeaders,
-            new StubbableConnectionManager(new ClusterConnectionManager(settings, transport, threadPool.getThreadContext()))
+            new StubbableConnectionManager(new ClusterConnectionManager(settings, transport, threadPool.getThreadContext())),
+            taskManager
         );
         this.original = transport.getDelegate();
     }
@@ -243,15 +263,6 @@ public final class MockTransportService extends TransportService {
         transportAddresses.addAll(Arrays.asList(boundTransportAddress.boundAddresses()));
         transportAddresses.add(boundTransportAddress.publishAddress());
         return transportAddresses.toArray(new TransportAddress[transportAddresses.size()]);
-    }
-
-    @Override
-    protected TaskManager createTaskManager(Settings settings, ThreadPool threadPool, Set<String> taskHeaders) {
-        if (MockTaskManager.USE_MOCK_TASK_MANAGER_SETTING.get(settings)) {
-            return new MockTaskManager(settings, threadPool, taskHeaders);
-        } else {
-            return super.createTaskManager(settings, threadPool, taskHeaders);
-        }
     }
 
     /**
